# python-api-template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
Project/: config.py  main.py
Project/db/: DBUtils.py  schema.sql
Project/models/: auth.py  data.py
Project/routes/: __init__.py  auth.py  example.py  health.py
Project/services/: auth.py
src/app/: config.py  main.py
src/app/db/: DBUtils.py  db.py
src/app/db/models/: __init__.py  data.py  models.py  users.py
src/app/models/: data.py
src/app/routes/: __init__.py  auth.py  example.py  health.py
src/app/services/: auth.py
