[project]
name = "python-api-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.139.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",  # Import sorting
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Path",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
